[build-system]
requires = ["scikit-build-core",
    "cython>=0.28.3",
    "setuptools>=61",
    "wheel"
    ]
build-backend = "scikit_build_core.build"


[project]
name = "nest-simulator"
dynamic = ["version"]
description = "NEST is a simulator for spiking neural network models that focuses on the dynamics, size and structure of neural systems rather than on the exact morphology of individual neurons."
keywords = ["nest", "simulator", "neuroscience", "neural", "neuron", "network", "ai", "spike", "spiking"]
readme = "README.md"
license.file = "LICENSE"
authors = [
  { name = "NEST Initiative", email = "users@nest-simulator.org" },
]
maintainers = [
  { name = "Steffen Graber", email = "s.graber@fz-juelich.de" },
]
requires-python = ">=3.9, <4.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "cython >= 0.28.3",
  "numpy",
  "matplotlib"
]

[project.optional-dependencies]
server = [
  "Flask",
  "flask-cors",
  "gunicorn",
  "requests",
  "RestrictedPython"
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "flake8",
  "black",
  "isort",
  "mypy",
  "scipy",
  "pandas"
]
docs = [
  "sphinx >= 6.2.1",
  "sphinx_rtd_theme",
  "sphinx_autobuild",
  "sphinx_gallery",
  "sphinx-tabs",
  "sphinx_design",
  "sphinx-material",
  "sphinx-copybutton",
  "sphinx-carousel",
  "sphinx-notfound-page",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-plantuml",
  "nbsphinx",
  "numpydoc",
  "example",
  "Image",
  "breathe",
  "csvkit",
  "docutils",
  "PyYAML >= 4.2b1",
  "tqdm",
  "yamllint"
]
examples = [
  "networkx",
  "seaborn",
  "ipython",
  "cycler",
  "imageio",
  "requests"
]
sonata = [
  "h5py>=3.8.0",
]
full = [
  # Examples dependencies
  "networkx", "seaborn", "ipython", "cycler", "imageio", "requests",
  # Sonata support
  "h5py>=3.8.0",
  # Additional tools
  "nestml", "nest-desktop",
  # Nest server dependencies
  "Flask", "flask-cors", "gunicorn", "requests", "RestrictedPython",
  # Development tools
  "jupyter", "jupyterlab", "notebook"
]

[project.urls]
Homepage = "https://nest-simulator.org/"
Documentation = "https://nest-simulator.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/nest/nest-simulator/issues"
Changelog = "https://nest-simulator.readthedocs.io/en/stable/whats_new/index.html"

[tool.scikit-build]
sdist.cmake = false
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "VERSION"
metadata.version.regex = "(?P<value>.*)"
# Conditional exclusions based on package type
wheel.exclude = [
  ".git*",           # Always exclude git files
  ".github/",        # Always exclude CI configuration
  "build_support/",  # Always exclude build tools
  "docs/",           # Exclude docs from package
]

[tool.scikit-build.cmake.define]
with-optimize = "-O2"
with-warning = "ON"
with-python = "ON"
with-boost = "ON"
with-gsl = "ON"
with-openmp = "ON"

[tool.cibuildwheel]
build-frontend = "default"
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = "*-win* *-manylinux_i686" # Skip
test-skip = ""
test-requires = [
  "isort",
  "junitparser",
  "matplotlib",
  "mypy",
  "numpy",
  "pandas",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "scipy",
]
test-command = """
  python <<'EOF'
import nest
print(f'NEST {nest.__version__} imported successfully')
nest.ResetKernel()
print('NEST kernel reset successful')
n = nest.Create('iaf_psc_alpha')
print(f'Created neuron: {n}')
try:
    import nest.lib.hl_api_sonata
    print('Sonata support: AVAILABLE')
except ImportError:
    print('Sonata support: NOT AVAILABLE')
EOF
"""
archs = ["auto64"]
config-settings = {}
dependency-versions = "pinned"
environment-pass = ["CIBW_BUILD_VERBOSITY"]
build-verbosity = 1
before-all = """
  set -e
  export MAKEFLAGS="-j2"
  NEST_SRC_DIR=${PWD}
  # Clean up any existing build artifacts
  rm -rf build/ *.so *.c 2>/dev/null || true

  # =============================================================================
  # PLATFORM-SPECIFIC DEPENDENCY INSTALLATION AND CONFIGURATION
  # =============================================================================
  # This section handles the installation of system dependencies based on the
  # detected platform. Each platform has specific requirements and paths that
  # need to be configured correctly for NEST to build successfully.

  if [[ "$OSTYPE" == "darwin"* ]]; then
    # =========================================================================
    # macOS SETUP - Completely separate handling for ARM64 and Intel x86_64
    # =========================================================================
    # Background: macOS has two different architectures with different Homebrew
    # installation paths. ARM64 Macs use /opt/homebrew while Intel Macs use
    # /usr/local. This separation ensures each architecture gets the correct
    # configuration without conflicts.

    echo "=== macOS Build Setup ==="
    echo "Build OS: $OSTYPE"
    echo "Architecture: $(arch)"
    echo "Homebrew path: $(which brew)"

    # ==========================================================================
    # UNIFIED macOS Setup with Dynamic Path Detection
    # ==========================================================================
    # Use brew --prefix for dynamic path detection instead of hardcoded paths.
    # This approach works for both ARM64 (/opt/homebrew) and Intel (/usr/local)
    # and is more robust against future Homebrew changes.

    echo "=== Unified macOS Setup with Dynamic Path Detection ==="

    # Get Homebrew base prefix dynamically
    HOMEBREW_PREFIX=$(brew --prefix)
    echo "Detected Homebrew prefix: $HOMEBREW_PREFIX"
    echo "Architecture: $(arch)"

    # Update Homebrew package database
    echo "Updating Homebrew package database..."
    brew update || echo "Warning: brew update failed, continuing with cached packages"

    # Install macOS dependencies with individual package checking
    echo "Installing macOS dependencies..."
    MACOS_PACKAGES="llvm libomp boost gsl libtool cmake hdf5"
    for pkg in $MACOS_PACKAGES; do
      if brew list "$pkg" >/dev/null 2>&1; then
        echo "✓ $pkg already installed"
      else
        echo "Installing $pkg..."
        brew install "$pkg" || {
          echo "❌ Failed to install $pkg"
          exit 1
        }
      fi
    done

    # Dynamic path configuration using brew --prefix
    echo "=== Configuring Dynamic Paths ==="
    export LIBOMP_PATH=$(brew --prefix libomp)
    export LLVM_PATH=$(brew --prefix llvm)
    export BOOST_ROOT=$(brew --prefix boost)
    export HDF5_ROOT=$(brew --prefix hdf5)

    echo "LIBOMP_PATH: $LIBOMP_PATH"
    echo "LLVM_PATH: $LLVM_PATH"
    echo "BOOST_ROOT: $BOOST_ROOT"
    echo "HDF5_ROOT: $HDF5_ROOT"

    # Verify OpenMP installation
    echo "=== OpenMP Verification ==="
    echo "Checking OpenMP at: $LIBOMP_PATH/lib/libomp.dylib"
    if [[ -f "$LIBOMP_PATH/lib/libomp.dylib" ]]; then
      echo "✅ OpenMP found: $LIBOMP_PATH/lib/libomp.dylib"
      ls -la "$LIBOMP_PATH/lib/libomp*"
    else
      echo "❌ OpenMP NOT found at: $LIBOMP_PATH/lib/"
      echo "Searching for OpenMP in Homebrew..."
      find $HOMEBREW_PREFIX -name "*libomp*" 2>/dev/null || echo "No libomp found in Homebrew"
      exit 1
    fi

    # Configure unified build environment
    echo "=== Configuring macOS Build Environment ==="
    export CMAKE_PREFIX_PATH="$HOMEBREW_PREFIX:$LIBOMP_PATH:$LLVM_PATH:$BOOST_ROOT:$HDF5_ROOT"
    export PKG_CONFIG_PATH="$HOMEBREW_PREFIX/lib/pkgconfig"
    export CPPFLAGS="-I$HOMEBREW_PREFIX/include -I$LIBOMP_PATH/include"
    export LDFLAGS="-L$HOMEBREW_PREFIX/lib -L$LIBOMP_PATH/lib"
    export DYLD_LIBRARY_PATH="$LIBOMP_PATH/lib"

    # Use Homebrew LLVM for consistent OpenMP support across architectures
    export CC="$LLVM_PATH/bin/clang"
    export CXX="$LLVM_PATH/bin/clang++"

    # Unified CMake configuration for OpenMP
    echo "=== Building Unified CMake Arguments ==="
    export CMAKE_ARGS="-DCMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH"
    export CMAKE_ARGS="$CMAKE_ARGS -DCMAKE_C_COMPILER=$CC"
    export CMAKE_ARGS="$CMAKE_ARGS -DCMAKE_CXX_COMPILER=$CXX"
    export CMAKE_ARGS="$CMAKE_ARGS -DCMAKE_C_FLAGS='-Xpreprocessor -fopenmp -I$LIBOMP_PATH/include'"
    export CMAKE_ARGS="$CMAKE_ARGS -DCMAKE_CXX_FLAGS='-Xpreprocessor -fopenmp -I$LIBOMP_PATH/include'"
    export CMAKE_ARGS="$CMAKE_ARGS -DCMAKE_EXE_LINKER_FLAGS='-L$LIBOMP_PATH/lib -lomp'"
    export CMAKE_ARGS="$CMAKE_ARGS -DCMAKE_SHARED_LINKER_FLAGS='-L$LIBOMP_PATH/lib -lomp'"
    export CMAKE_ARGS="$CMAKE_ARGS -DOpenMP_C_FLAGS='-Xpreprocessor -fopenmp'"
    export CMAKE_ARGS="$CMAKE_ARGS -DOpenMP_C_LIB_NAMES='omp'"
    export CMAKE_ARGS="$CMAKE_ARGS -DOpenMP_C_LIBRARIES='$LIBOMP_PATH/lib/libomp.dylib'"
    export CMAKE_ARGS="$CMAKE_ARGS -DOpenMP_CXX_FLAGS='-Xpreprocessor -fopenmp'"
    export CMAKE_ARGS="$CMAKE_ARGS -DOpenMP_CXX_LIB_NAMES='omp'"
    export CMAKE_ARGS="$CMAKE_ARGS -DOpenMP_CXX_LIBRARIES='$LIBOMP_PATH/lib/libomp.dylib'"
    export CMAKE_ARGS="$CMAKE_ARGS -DBOOST_ROOT=$BOOST_ROOT"
    export CMAKE_ARGS="$CMAKE_ARGS -DHDF5_ROOT=$HDF5_ROOT"
    export CMAKE_ARGS="$CMAKE_ARGS -Dwith-hdf5=ON"

    # Verify additional dependencies
    echo "=== Verifying Additional macOS Dependencies ==="
    ls -la $BOOST_ROOT/lib/libboost* | head -3 || echo "WARNING: Boost libraries not found"
    ls -la $HDF5_ROOT/lib/libhdf5* | head -3 || echo "WARNING: HDF5 libraries not found"

    echo "=== macOS Environment Summary ==="
    echo "HOMEBREW_PREFIX: $HOMEBREW_PREFIX"
    echo "LIBOMP_PATH: $LIBOMP_PATH"
    echo "LLVM_PATH: $LLVM_PATH"
    echo "BOOST_ROOT: $BOOST_ROOT"
    echo "HDF5_ROOT: $HDF5_ROOT"
    echo "CC: $CC"
    echo "CXX: $CXX"

    echo "Final macOS CMAKE_ARGS: $CMAKE_ARGS"

  elif [ "${AUDITWHEEL_POLICY:-}" = "musllinux_1_2" ]; then
    apk add --no-cache git libc6-compat gsl gsl-dev wget bzip2 cmake boost-dev hdf5-dev
    export CMAKE_ARGS="${CMAKE_ARGS} -Dwith-hdf5=ON"

  elif command -v yum >/dev/null 2>&1; then
    yum install -y git glibc glibc-devel gsl gsl-devel wget bzip2 cmake make gcc gcc-c++
    # Install boost from source on manylinux
    wget -q https://archives.boost.io/release/1.88.0/source/boost_1_88_0.tar.bz2
    tar --bzip2 -xf boost_1_88_0.tar.bz2
    cd boost_1_88_0
    ./bootstrap.sh --with-libraries=system,filesystem,program_options
    ./b2 -j2 --prefix=/usr/local install
    cd ..
    rm -rf boost_1_88_0*
    export CMAKE_ARGS="${CMAKE_ARGS} -Dwith-hdf5=OFF"

  elif command -v apt-get >/dev/null 2>&1; then
    apt-get update
    apt-get install -y git build-essential gsl-bin libgsl-dev wget bzip2 cmake libboost-all-dev libhdf5-dev
    export CMAKE_ARGS="${CMAKE_ARGS} -Dwith-hdf5=ON"

  else
    echo "Unknown package manager, trying to continue..."
    export CMAKE_ARGS="${CMAKE_ARGS} -Dwith-hdf5=OFF"
  fi

  echo "Final CMAKE_ARGS: $CMAKE_ARGS"
  """

# macOS deployment target configuration for better compatibility
[[tool.cibuildwheel.overrides]]
select = "*-macos*"
inherit.environment = "append"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }  # ✅ Bessere Kompatibilität
